XUL window layout - fixed unreadable color combination of selected richlistitems by making them nonselectable

--- a/extension/content/browser.css
+++ b/extension/content/browser.css
@@ -92,6 +92,7 @@ description.study-title {
 
 richlistitem.tp-study-list {
     min-height: 120px;
+    color: black;
     border-color: grey;
     border-bottom-style: solid;
     border-width: 1px;
@@ -99,6 +100,7 @@ richlistitem.tp-study-list {
 
 richlistitem.tp-new-results {
     min-height: 120px;
+    color: black;
     border-color: grey;
     border-bottom-style: solid;
     border-width: 1px;
@@ -107,6 +109,7 @@ richlistitem.tp-new-results {
 
 richlistitem.tp-opted-out {
     min-height: 120px;
+    color: grey;
     border-color: grey;
     border-bottom-style: solid;
     border-width: 1px;
@@ -130,3 +133,4 @@ image.results-thumbnail {
     padding: 2px;
     -moz-border-radius: 4px 4px; 
 }
+
